# basketball_predict

./: .pre-commit-config.yaml  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: bask.tex  bask_pres.tex  refs.bib  task_paper.py
prep/: __init__.py  parser.py  scraper.py
prep/data/: april.html  april_2023-02-16.html  december.html  december_2023-02-16.html  february.html  february_2023-02-16.html  january.html  january_2023-02-16.html  march.html  march_2023-02-16.html  november.html  november_2023-02-16.html  october.html  october_2023-02-16.html
src/bask/: __init__.py  config.py
src/bask/analysis/: benchmark.py  delete_at_end.py  evaluation.py  model.py  predict.py  task_analysis.py
src/bask/data/: concatenated_data_2023-02-24.csv  conferences.csv  data.csv  data.pkl  data_2023-02-17.pkl  data_2023-02-22.pkl  data_2023-02-24.pkl  data_2023-03-03.pkl  data_2023-03-05.pkl  data_2023-03-08.pkl
src/bask/data_management/: __init__.py  clean_data.py  data_info.yaml  task_data_management.py
src/bask/final/: __init__.py  plot.py  task_final.py
src/bask/prep/: parser.py  scraper.py
src/data/: data.csv  data.pkl
tests/analysis/: data_fixture.csv  data_fixture_benchmark.csv  data_fixture_benchmark_pred.csv  data_fixture_pred.csv  data_info_fixture.yaml  test_evaluation.py  test_model.py  test_predict.py
tests/data_management/: data_fixture.csv  data_info_fixture.yaml  test_clean_data.py
tests/preparation/: __init__.py  test_preparation.py
(+45 files in other folders)
