[metadata]
version=0.0.1
name = bask
description = Scraping basketball data to predict future game outcomes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NormProgr/bask
author = Norman Metzinger, Anne Rebecca Ringborg
author_email = norman.metzinger@gmx.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/NormProgr/bask
    Documentation = https://github.com/NormProgr/bask
    Github = https://github.com/NormProgr/bask
    Tracker = https://github.com/NormProgr/bask/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
